[package]
name = "postflight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Flight recorder for AI coding agents — observe everything, enforce nothing"
license = "MIT"
repository = "https://github.com/yashanil98/postflight"

[[bin]]
name = "postflight"
path = "src/bin/main.rs"

[lib]
name = "postflight"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
similar = "2"
toml = "0.8"
dirs = "6"
colored = "3"
nix = { version = "0.31", features = ["process", "signal", "poll", "term"] }
libc = "0.2"
bytesize = { version = "2", features = ["serde"] }
signal-hook = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
fsevent-stream = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
format_push_string = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
needless_continue = "allow"
borrow_as_ptr = "allow"
map_unwrap_or = "allow"
